# arcagi

./: .gitignore  HyperConvTranspose2d.py  README.md  create.sh  data_loader.py  experiment_37_instructions.md  model.py  plan.md  pyproject.toml  setup.sh  test_d4_augmentation.py
arcagi/: HyperConvTranspose2d.py  TGA.py  adaptive_grad_scaler.py  arsinhnorm.py  d4_augmentation_dataset.py  d4_augmentation_example.py  data_loader.py  ex001.py  ex002.py  model.py  models.py  order2.py  positional_embeddings_2d.py  preprocess.py  preprocess_changes.md  unet.py
arcagi/color_mapping/: README.md  __init__.py  base43.py  base43_ex01.py  base43_ex02.py  base43_ex03.py  base43_ex04.py  base43_ex05.py  base43_ex06.py  base43_ex07.py  base43_ex08.py  base43_ex09.py  base43_ex10.py  ex0.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py  ex10.py  ex11.py  ex12.py  ex13.py  ex14.py  ex15.py  ex16.py  ex17.py  ex17a.py  ex18.py  ex19.py  ex20.py  ex21.py  ex22.py  ex23.py  ex24.py  ex25.py  ex26.py  (+16 more)
arcagi/main_mapping/: CHANGES.md  INTEGRATION_README.md  README.md  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py  test_color_integration.py
arcagi/tests/: test_HyperConvTranspose2d.py  test_TGA.py  test_data_loader.py  test_data_loader_v2.py  test_metrics.py  test_model.py  test_unet.py
arcagi/utils/: __init__.py  frame_capture.py  metrics.py  metrics_tracker.py  terminal_imshow.py  terminal_relshow.py  validation_reporter.py  visualization.py
lib/: order2.py
tests/: test_adaptive_grad_scaler.py
tests/lib/: test_order2.py
