[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcagi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "loguru>=0.7.2",
    "pytorch-lightning>=2.1.0",
    "wandb>=0.15.1",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.10.0",
    "rich>=14.0.0",
    "requests>=2.32.3",
    "pytest>=8.3.5",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
include = ["arcagi*"]
exclude = ["processed_data*"]
